--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <footer class="footer-container">
         <h2>Connect with me</h2>
         <div class="social-container">
-            <a target="blank" href="https://twitter.com/abhitwts"
+            <a target="blank" href="https://twitter.com/abhitwts_?t=d7NPe1qU8moQTDEM1W_YgA&s=08"
                 ><img src="images/twitter-icon.svg" alt="" class="image-size"
             /></a>
             <a
